--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 						
 								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
-							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+							<p>&copy; Untitled. Design: <a href="Hecho por: Regina Richter">HTML5 UP</a>.</p>
 						</div>
 					</footer>
 
